Archive2/6a/76261b04901b39/output
main.cpp: In static member function 'static void Foo<T>::my_func()':
main.cpp:10:9: error: static assertion failed: I take only floats, you fool
         static_assert(false, "I take only floats, you fool");
         ^
